# device_selection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ideafast_deviceselection/: something.py
notebooks/: Device Selection Criteria.ipynb  deviceselection_scores.ipynb
notebooks/.ipynb_checkpoints/: Device Selection Criteria-checkpoint.ipynb
notebooks/Keyboard Fatigue Study/: Parsing Keyboard Data.ipynb  Visualising Keyboard Data.ipynb
tests/: test_ideafast_deviceselection.py
