[tool.poetry]
name = "ideafast-deviceselection"
version = "0.1.0"
description = ""
authors = ["David <davidverweij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
altair = "^4.1.0"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
